// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions acceptedPricesUpdate 1`] = `
Object {
  "type": "beethovenAcceptedPrices",
  "value": Array [
    "test",
  ],
}
`;

exports[`actions addressesUpdate 1`] = `
Object {
  "type": "beethovenAddresses",
  "value": Object {
    "test": "test",
  },
}
`;

exports[`actions balancesUpdate 1`] = `
Object {
  "type": "beethovenBalances",
  "value": Object {
    "a": 1,
    "b": 2,
  },
}
`;

exports[`actions conversionsUpdate 1`] = `
Object {
  "type": "beethovenConversions",
  "value": Array [
    "test",
  ],
}
`;

exports[`actions exchangePricesUpdate 1`] = `
Object {
  "type": "beethovenExchangePrices",
  "value": Array [
    "test",
  ],
}
`;

exports[`actions fetchAcceptedPrices 1`] = `
Array [
  Object {
    "type": "beethovenAcceptedPrices",
    "value": Array [
      "test",
    ],
  },
]
`;

exports[`actions fetchConversions 1`] = `
Array [
  Object {
    "type": "beethovenConversions",
    "value": Array [
      Object {
        "transactionHash": "aaa",
      },
      Object {
        "timestamp": 1234567890,
        "transactionHash": "bbb",
      },
    ],
  },
]
`;

exports[`actions fetchConversions 2`] = `
Object {
  "timestamp": 1234567890,
  "transactionHash": "aaa",
}
`;

exports[`actions fetchConversions 3`] = `
Object {
  "timestamp": 0,
  "transactionHash": "ccc",
}
`;

exports[`actions fetchExchangePrices 5 1`] = `
Array [
  Object {
    "type": "beethovenExchangePrices",
    "value": Array [
      "test",
      1,
      1210567890,
      0,
      "ETH|USD",
    ],
  },
]
`;

exports[`actions fetchExchangePrices 60 1`] = `
Array [
  Object {
    "type": "beethovenExchangePrices",
    "value": Array [
      "test",
      60,
      888967890,
      0,
      "ETH|USD",
    ],
  },
]
`;

exports[`actions getAddresses 1`] = `
Array [
  Object {
    "type": "beethovenAddresses",
    "value": Object {
      "test": "test",
    },
  },
]
`;

exports[`actions getBalances 1`] = `
Array [
  Object {
    "type": "beethovenBalances",
    "value": Object {
      "a": undefined,
      "b": undefined,
    },
  },
]
`;

exports[`actions getBalances 2`] = `
Array [
  Array [
    "0xbc4e4029B41B0894353C31267CE86c2192545e53",
    "0x0",
  ],
  Array [
    "0xFeCd43cd0bc217e5513116c83F48498A018A1da6",
    "0x0",
  ],
]
`;

exports[`actions getStates 1`] = `
Array [
  Object {
    "type": "beethovenStates",
    "value": Object {
      "test": "test",
    },
  },
]
`;

exports[`actions refresh 1`] = `
Array [
  Object {
    "type": "beethovenStates",
    "value": Object {
      "test": "test",
    },
  },
  Object {
    "type": "beethovenBalances",
    "value": Object {
      "a": undefined,
      "b": undefined,
    },
  },
  Object {
    "type": "beethovenExchangePrices",
    "value": Array [
      "test",
      1,
      1210567890,
      0,
      "ETH|USD",
    ],
  },
  Object {
    "type": "beethovenAcceptedPrices",
    "value": Array [
      "test",
    ],
  },
  Object {
    "type": "beethovenConversions",
    "value": Array [
      Object {
        "transactionHash": "aaa",
      },
      Object {
        "timestamp": 1234567890,
        "transactionHash": "bbb",
      },
    ],
  },
]
`;

exports[`actions refreshAdmin 1`] = `[Function]`;

exports[`actions statesUpdate 1`] = `
Object {
  "type": "beethovenStates",
  "value": Object {
    "test": "test",
  },
}
`;

exports[`actions subscribe 1`] = `
Array [
  Object {
    "id": 0,
    "tenor": "Perpetual",
    "type": "beethovenSubscription",
  },
  Object {
    "id": 123,
    "tenor": "Perpetual",
    "type": "beethovenSubscription",
  },
  Object {
    "type": "beethovenStates",
    "value": Object {
      "test": "test",
    },
  },
  Object {
    "type": "beethovenBalances",
    "value": Object {
      "a": undefined,
      "b": undefined,
    },
  },
  Object {
    "type": "beethovenExchangePrices",
    "value": Array [
      "test",
      1,
      1210567890,
      0,
      "ETH|USD",
    ],
  },
  Object {
    "type": "beethovenAcceptedPrices",
    "value": Array [
      "test",
    ],
  },
  Object {
    "type": "beethovenConversions",
    "value": Array [
      Object {
        "transactionHash": "aaa",
      },
      Object {
        "timestamp": 1234567890,
        "transactionHash": "bbb",
      },
    ],
  },
]
`;

exports[`actions subscribeAdmin 1`] = `[Function]`;

exports[`actions subscriptionUpdate 1`] = `
Object {
  "id": 123,
  "tenor": "tenor",
  "type": "beethovenSubscription",
}
`;
